--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 
 <body class="font-manrop">
     <!-- start header section  -->
-    <header class="container mx-auto">
+    <header class=" mx-auto">
         <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+            <div class="hero-content flex-col lg:flex-row my-24">
                 <div>
                     <h1 class="text-7xl font-extrabold">It's good tea time at The Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
                     <button class="btn btn-primary capitalize">Explore More <img src="images/arrow.png" alt=""></button>
                 </div>
-                <div>
-                    <img src="images/banner.png" class="max-w-sm rounded-lg -z-50" />
+                <div class="relative">
+                    <img src="images/banner.png" class="max-w-sm rounded-lg" />
 
                     <!-- rating badge  -->
-                    <div class="flex z-50 gap-4 items-center justify-center p-4 rounded-lg shadow-lg w-60 -mt-16">
+                    <div class="flex absolute gap-4 items-center justify-center p-4 rounded-lg shadow-lg w-60 -mt-16 bg-white">
                         <i class="fa-solid fa-star text-5xl text-amber-400"></i>
                         <div>
                             <h3 class="text-3xl font-bold">5.00</h3>
@@ -68,6 +68,83 @@
         </div>
     </header>
     <!-- end header section -->
+
+
+    <!-- start header section  -->
+    <main class="w-[90%] mx-auto">
+        <!-- featured sectin  -->
+        <section class="text-center">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="md:max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration
+                in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+
+            <!-- featured card container  -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-12">
+                <!-- first card  -->
+                <div class="card pt-8 bg-gradient-to-r from-[#f4f4f4] to-[f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-center text-3xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- second card  -->
+                <div class="card pt-8 bg-gradient-to-r from-[#f4f4f4] to-[f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-center text-3xl font-bold">Black Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- third card  -->
+                <div class="card pt-8 bg-gradient-to-r from-[#f4f4f4] to-[f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-center text-3xl font-bold">Lemon Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- fourth card  -->
+                <div class="card pt-8 bg-gradient-to-r from-[#f4f4f4] to-[f4f4f4] shadow-xl">
+                    <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <h2 class="text-center text-3xl font-bold">Green Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- great tea fresh tea  section  -->
+        <section class="py-24 flex gap-24 flex-col lg:flex-row justify-between items-center">
+            <div class="grid grid-cols-2 gap-4 grid-rows-3 flex-1">
+                <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="row-span-2 rounded-lg bg-[#e6a6231a] flex justify-center items-center">
+                    <img src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2 rounded-lg bg-[#5776391a] flex justify-center items-center">
+                    <img src="images/fresh-2.png" alt="">
+                </div>
+                <div class="rounded-lg h-36 bg-gradient-to-r from-[#d9d9d9] to-[#ffffff]"></div>
+            </div>
+            <div class="space-y-2 flex-1">
+                <h3 class="text-5xl font-bold">Great Tea, Freshly Presented</h3>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p> <br>
+
+                <h4 class="text-2xl font-bold">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+
+                <h4 class="text-2xl font-bold">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+    </main>
+    <!-- end header section  -->
 </body>
 
 </html>
