--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     <img src="images/banner.png" class="max-w-sm rounded-lg" />
 
                     <!-- rating badge  -->
-                    <div class="flex absolute gap-4 items-center justify-center p-4 rounded-lg shadow-lg w-60 -mt-16 bg-white">
+                    <div
+                        class="flex absolute gap-4 items-center justify-center p-4 rounded-lg shadow-lg w-60 -mt-16 bg-white">
                         <i class="fa-solid fa-star text-5xl text-amber-400"></i>
                         <div>
                             <h3 class="text-3xl font-bold">5.00</h3>
@@ -141,6 +142,61 @@
 
                 <h4 class="text-2xl font-bold">Premium Quality</h4>
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+
+
+        <!-- super client section  -->
+        <section
+            class="my-24 flex flex-col lg:flex-row items-center gap-20 px-12 py-24 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#f00]">
+            <div class="space-y-4 flex-1">
+                <h2 class="text-5xl font-extrabold text-white">Meet Our Super Clients</h2>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly believable. </p>
+                <button class="btn bg-white">Shop All</button>
+            </div>
+
+            <!-- review container  -->
+            <div class="flex-1 space-y-10 relative">
+                <!-- previous review  -->
+                <div class="p-10 opacity-60 rounded-lg bg-white relative">
+                    <img class="absolute -top-5 -left-5 border-white border-4 rounded-full" src="images/client.png"
+                        alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p><br>
+                    <h4 class="text-2xl font-bold">Iham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!-- current review  -->
+                <div class="p-10 rounded-lg bg-white absolute top-24 -left-12 z-50 lg:w-[430px]">
+                    <img class="absolute -top-5 -left-5 border-white border-4 rounded-full" src="images/client.png"
+                        alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p><br>
+                    <h4 class="text-2xl font-bold">Iham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!-- next review  -->
+                <div class="p-10 opacity-60 rounded-lg bg-white relative">
+                    <img class="absolute -top-5 -left-5 border-white border-4 rounded-full" src="images/client.png"
+                        alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p><br>
+                    <h4 class="text-2xl font-bold">Iham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
