--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 
         <!-- super client section  -->
         <section
-            class="my-24 flex flex-col lg:flex-row items-center gap-20 px-12 py-24 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#f00]">
+            class="my-12 md:my-24 flex flex-col lg:flex-row items-center gap-20 px-12 py-12 md:py-24 rounded-xl bg-gradient-to-r from-[#ff8938] to-[#f00]">
             <div class="space-y-4 flex-1">
-                <h2 class="text-5xl font-extrabold text-white">Meet Our Super Clients</h2>
+                <h2 class="text-3xl md:text-5xl font-extrabold text-white">Meet Our Super Clients</h2>
                 <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
                     have suffered alteration in some form, by injected humour, or randomised words which don't look even
                     slightly believable. </p>
@@ -173,7 +173,7 @@
                 </div>
 
                 <!-- current review  -->
-                <div class="p-10 rounded-lg bg-white absolute top-24 -left-12 z-50 lg:w-[430px]">
+                <div class="p-10 rounded-lg bg-white absolute top-24 -left-6 lg:-left-12 z-50 w-[90%] lg:w-[430px]">
                     <img class="absolute -top-5 -left-5 border-white border-4 rounded-full" src="images/client.png"
                         alt="">
                     <p>We are providing the best and suitable home insurance services for the people who are interested
