--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#ff8938',
+                        'gradient-end': '#f00',
                     }
                 }
             }
@@ -50,7 +51,7 @@
                     <h1 class="text-7xl font-extrabold">It's good tea time at The Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary capitalize">Explore More <img src="images/arrow.png" alt=""></button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white capitalize">Explore More <img src="images/arrow.png" alt=""></button>
                 </div>
                 <div class="relative">
                     <img src="images/banner.png" class="max-w-sm rounded-lg" />
@@ -199,8 +200,66 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- news event section  -->
+        <section>
+
+        </section>
     </main>
     <!-- end header section  -->
+
+
+
+    <!-- start footer section  -->
+    <footer class="p-10 bg-base-200 ">
+        <div class="w-[90%] mx-auto">
+            <div class="flex justify-between items-center gap-10 mb-20 flex-col lg:flex-row">
+                <img src="images/cup.png" alt="">
+                <div class="flex items-center gap-10">
+                    <p>Ready to get strated?</p>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+                </div>
+            </div>
+            <div class="footer text-base-content grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <div>
+                    <span class="footer-title">Services</span>
+                    <a class="link link-hover">Branding</a>
+                    <a class="link link-hover">Design</a>
+                    <a class="link link-hover">Marketing</a>
+                    <a class="link link-hover">Advertisement</a>
+                </div>
+                <div>
+                    <span class="footer-title">Company</span>
+                    <a class="link link-hover">About us</a>
+                    <a class="link link-hover">Contact</a>
+                    <a class="link link-hover">Jobs</a>
+                    <a class="link link-hover">Press kit</a>
+                </div>
+                <div>
+                    <span class="footer-title">Legal</span>
+                    <a class="link link-hover">Terms of use</a>
+                    <a class="link link-hover">Privacy policy</a>
+                    <a class="link link-hover">Cookie policy</a>
+                </div>
+                <div>
+                    <span class="footer-title">Newsletter</span>
+                    <div class="form-control w-80">
+                        <label class="label">
+                            <span class="label-text">Enter your email address</span>
+                        </label>
+                        <div class="relative">
+                            <input type="text" placeholder="username@site.com"
+                                class="input input-bordered w-full pr-16" />
+                            <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="text-center mt-8">&copy; 2027 UIDesign.to - All rights reserved.</p>
+        </div>
+    </footer>
+    <!-- end footer section  -->
 </body>
 
 </html>
