added news section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                     <h1 class="text-7xl font-extrabold">It's good tea time at The Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white capitalize">Explore More <img src="images/arrow.png" alt=""></button>
+                    <button
+                        class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white capitalize">Explore
+                        More <img src="images/arrow.png" alt=""></button>
                 </div>
                 <div class="relative">
                     <img src="images/banner.png" class="max-w-sm rounded-lg" />
@@ -203,8 +205,56 @@
 
 
         <!-- news event section  -->
-        <section>
+        <section class="mb-24">
+            <h2 class="text-5xl font-bold text-center mb-4">News & Events</h2>
+            <p class="text-center px-8 lg:px-48">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
 
+            <div class="mt-12 grid grid-cols-1  md:grid-cols-3 gap-12">
+                <!-- card one  -->
+                <div class="card p-8 bg-base-100 border-2 border-orange-300">
+                    <figure class="mb-4">
+                        <img src="/images/news-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body p-0">
+                        <p class="">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-link decoration-indigo-50">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card two  -->
+                <div class="card p-8 bg-base-100 border-2 border-orange-300">
+                    <figure class="mb-4">
+                        <img src="/images/news-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body p-0">
+                        <p class="">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-link decoration-indigo-50">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card three  -->
+                <div class="card p-8 bg-base-100 border-2 border-orange-300">
+                    <figure class="mb-4">
+                        <img src="/images/news-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body p-0">
+                        <p class="">Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-link decoration-indigo-50">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- end header section  -->
@@ -218,7 +268,8 @@
                 <img src="images/cup.png" alt="">
                 <div class="flex items-center gap-10">
                     <p>Ready to get strated?</p>
-                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get
+                        Started</button>
                 </div>
             </div>
             <div class="footer text-base-content grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
